--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/swagger": "^7.3.1",
     "@prisma/client": "5.11.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.19.2",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -44,6 +46,7 @@
     "@nestjs/testing": "^10.0.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
